# ReWrapped

./: Cargo.toml  Dockerfile  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: deploy.yml
src/: main.rs  tailwind.css
src/data_parser/: mod.rs  playback_record.rs  processing.rs  queries.rs
src/data_parser/test/: test_data.json
src/views/: data_error.rs  file_upload.rs  mod.rs  upload_guide.rs
src/views/components/: app_wrapper.rs  chart.rs  data_context.rs  file_upload.rs  mod.rs
src/views/components/charts/: bar_chart.js  bar_chart.rs  donut_chart.js  donut_chart.rs  mod.rs  polar_area_chart.js  polar_area_chart.rs
src/views/stats/: chart.rs  mod.rs  top_artists.rs
