[package]
name = "rewrapped"
version = "0.1.0"
edition = "2021"

[dependencies]
binary-heap-plus = "0.5.0"
chrono = { version = "0.4", features = ["serde"] }
gloo = "0.11.0"
js-sys = "0.3.76"
rayon = "1.10.0"
serde = "1.0.216"
serde_json = "1.0.133"
tokio = "1.42.0"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
wasm-logger = "0.2.0"
web-sys = "0.3.76"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
